# cloud-build-badge

./: Dockerfile  Makefile  README.md  cloudbuild.yaml  main.py  make_badge.py  pyproject.toml  requirements.txt
cloud_build_badge/: __init__.py  badge_maker.py  cloud_build_message.py
tests/: integration.sh  main_test.py  test_func.py
